# coma

./: .gitignore  Cargo.toml  LICENSE  README.md  coma.py  perf.sh  perf_async.txt  tailwind.config.js
Docs/src/: state.md
src/: browser.rs  cli.rs  config.rs  display.rs  extract.rs  format.rs  graph.rs  main.rs  node.rs  scrapy.rs  state.rs  topology.rs
src/scrapy/: crawl.rs  extract.rs  mod.rs
src/topology/: format.rs  mod.rs  node.rs
static/: index.html
templates/: index.html
