[package]
name = "coma"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.11", features = ["derive"] }
colored = "2.1.0"
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = [
  "fetch",
] }
markup5ever = "0.12.1"
reqwest = { version = "0.12.5", features = ["blocking"] }
scraper = "0.19.1"
tokio = { version = "1.39.2", features = ["full"] }
url = "2.5.2"
