[package]
name = "coma"
version = "0.2.2"
edition = "2021"
authors = ["Noah <pro@noahcode.dev>"]
license = "MIT"
description = "Coma is a lightweight command-line tool designed for crawling websites"
repository = "https://github.com/noahfraiture/coma"
readme = "README.md"

keywords = ["scraping", "crawler", "web-discovery"]
categories = ["web-programming"]

[dependencies]
anyhow = "1.0.86"
askama = { version = "0.12.1", features = ["serde-json"] }
chrono = "0.4.38"
clap = { version = "4.5.11", features = ["derive"] }
colored = "2.1.0"
futures = "0.3.30"
headless_chrome = { version = "1.0.12", features = ["fetch"] }
markup5ever = "0.12.1"
reqwest = { version = "0.12.5", features = ["blocking"] }
scraper = "0.19.1"
serde = { version = "1.0.204", features = ["derive", "rc"] }
serde_json = "1.0.127"
tempfile = "3.11.0"
tokio = { version = "1.39.2", features = ["full"] }
url = "2.5.2"
webbrowser = "1.0.1"
